--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
     "react-dom": "^15.4",
     "react-test-renderer": "^15.4"
   },
+  "peerDependencies": {
+    "lodash": "^4.17.10"
+  },
   "jest": {
     "modulePaths": [
       "<rootDir>/src/js"
