Include bundle and lodash in manifest

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
 include dash_lazy_load/bundle.js
 include dash_lazy_load/bundle.js.map
 include dash_lazy_load/metadata.json
+include dash_lazy_load/lodash.min.js
 include README.md
 include LICENSE.md
