--- a/package.json
+++ b/package.json
@@ -29,21 +29,20 @@
     "uninstall-local": "pip uninstall dash-lazy-load -y"
   },
   "dependencies": {
-    "babel-loader": "^8.0.0",
+    "babel-loader": "^7.1.5",
     "builder": "^4.0.0",
     "copyfiles": "^2.0.0",
     "dash-components-archetype": "^0.2.11",
     "ify-loader": "^1.1.0",
     "prop-types": "^15.6.0",
-    "react-lazyload": "^2.3.0",
-    "webpack": "^3.8.1"
+    "react-lazyload": "^2.3.0"
   },
   "devDependencies": {
     "@stratodem/js-archetype": "1.10.0",
     "compression-webpack-plugin": "1.1.11",
     "dash-components-archetype-dev": "0.2.11",
     "dezalgo": "1.0.3",
-    "enzyme": "3.3.0",
+    "enzyme": "3.8.0",
     "enzyme-adapter-react-15": "1.0.5",
     "enzyme-to-json": "3.3.3",
     "flow-bin": "0.61.0",
@@ -51,7 +50,9 @@
     "jest": "22.4.3",
     "react": "15.6.2",
     "react-dom": "15.6.2",
-    "react-test-renderer": "15.6.2"
+    "react-test-renderer": "15.6.2",
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1"
   },
   "peerDependencies": {
     "lodash": "^4.17.10"
