--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "uninstall-local": "pip uninstall dash-lazy-load -y"
   },
   "dependencies": {
-    "babel-loader": "^7.1.5",
     "builder": "^4.0.0",
     "copyfiles": "^2.0.0",
     "dash-components-archetype": "^0.2.11",
@@ -38,19 +37,31 @@
     "react-lazyload": "^2.3.0"
   },
   "devDependencies": {
-    "@stratodem/js-archetype": "1.10.0",
+    "@babel/core": "^7.3.4",
+    "@babel/plugin-proposal-class-properties": "^7.3.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-react-jsx": "^7.3.0",
+    "@babel/plugin-transform-runtime": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-stage-2": "^7.0.0",
+    "@babel/runtime": "^7.3.4",
+    "babel-jest": "^24.1.0",
+    "babel-loader": "^8.0.5",
     "compression-webpack-plugin": "2.0.0",
     "dash-components-archetype-dev": "0.2.11",
     "dezalgo": "1.0.3",
     "enzyme": "3.9.0",
-    "enzyme-adapter-react-15": "1.0.5",
+    "enzyme-adapter-react-16": "1.10.0",
     "enzyme-to-json": "3.3.3",
     "flow-bin": "0.93.0",
     "git-labelmaker": "0.9.0",
     "jest": "24.1.0",
-    "react": "15.6.2",
-    "react-dom": "15.6.2",
-    "react-test-renderer": "15.6.2",
+    "lodash": "^4.17.11",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
+    "react-test-renderer": "^16.8.3",
     "webpack": "4.29.5",
     "webpack-cli": "3.2.3"
   },
@@ -59,10 +70,14 @@
   },
   "jest": {
     "modulePaths": [
-      "<rootDir>/src/js"
+      "<rootDir>/src"
     ],
+    "transform": {
+      "^.+\\.js$": "babel-jest"
+    },
     "moduleFileExtensions": [
-      "js"
+      "js",
+      "jsx"
     ],
     "moduleDirectories": [
       "node_modules"
@@ -74,7 +89,7 @@
     "testRegex": "\\.test\\.js$",
     "setupFiles": [
       "raf/polyfill",
-      "<rootDir>test/_test-env.js"
+      "<rootDir>src/__tests__/_test-env.js"
     ],
     "collectCoverage": true,
     "snapshotSerializers": [
